Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106912

MoltenVK: Failed to create Vulkan instance when implementation supports is_portability_driver

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.4.1, 6.5.0 Beta1
    • 6.3.2
    • GUI: Vulkan
    • None
    • macOS
    • 7fbc741d10 (qt/qtbase/dev) 7fbc741d10 (qt/tqtc-qtbase/dev) f90107341c (qt/qtbase/6.4) f90107341c (qt/tqtc-qtbase/6.4)

    Description

      MoltenVK supports Vulkan Portability extension, so the create method in QVulkanInstance will fail with error:

      ERROR:            vkCreateInstance: Found drivers that contain devices which support the portability subset, but the portability enumeration bit was not set!. Applications that wish to enumerate portability drivers must set the VK_INSTANCE_CREATE_ENUMERATE_PORTABILITY_BIT_KHR bit in the VkInstanceCreateInfo flags and enable the VK_KHR_portability_enumeration instance extension.
      ERROR:            vkCreateInstance: Found no drivers!
      Failed to create Vulkan instance: -9
      Failed to create platform Vulkan instance
      Failed to create Vulkan instance: -9
      Abort trap: 6
      

      MRE is in attachment.


      MoltenVK_icd.json:

      {
          "file_format_version" : "1.0.0",
          "ICD": {
              "library_path": "../../../lib/libMoltenVK.dylib",
              "api_version" : "1.1.0",
              "is_portability_driver" : true
          }
      }
      

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            paper L JC
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change