src/gui/vulkan/qbasicvulkanplatforminstance.cpp
@@ -216,10 +216,10 @@ void QBasicPlatformVulkanInstance::initInstance(QVulkanInstance *instance, const
                                                  apiVersion.microVersion());
         }
 
+        m_enabledExtensions.append("VK_KHR_surface");
+        m_enabledExtensions.append("VK_KHR_portability_enumeration");
         if (!flags.testFlag(QVulkanInstance::NoDebugOutputRedirect))
             m_enabledExtensions.append("VK_EXT_debug_utils");
-
-        m_enabledExtensions.append("VK_KHR_surface");
 
         for (const QByteArray &ext : extraExts)
             m_enabledExtensions.append(ext);
@@ -258,6 +258,7 @@ void QBasicPlatformVulkanInstance::initInstance(QVulkanInstance *instance, const
         VkInstanceCreateInfo instInfo = {};
         instInfo.sType = VK_STRUCTURE_TYPE_INSTANCE_CREATE_INFO;
         instInfo.pApplicationInfo = &appInfo;
+        instInfo.flags = 0x00000001; // VK_INSTANCE_CREATE_ENUMERATE_PORTABILITY_BIT_KHR
 
         QList<const char *> layerNameVec;
         for (const QByteArray &ba : qAsConst(m_enabledLayers))
